crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_full.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Html:
      Doctype: "!DOCTYPE"
  - Html:
      Element:
        tag_name: html
        attributes: {}
        children:
          - Html:
              Element:
                tag_name: head
                attributes: {}
                children:
                  - Html:
                      Element:
                        tag_name: title
                        attributes: {}
                        children:
                          - Text: Test
          - Html:
              Element:
                tag_name: body
                attributes: {}
                children:
                  - Html:
                      Element:
                        tag_name: h1
                        attributes: {}
                        children:
                          - Text: Hello World
                  - Html:
                      Element:
                        tag_name: p
                        attributes: {}
                        children:
                          - Text: This is a test
                  - Script:
                      Element:
                        attributes: {}
                        children:
                          - Text: "console.log(\"Hello World\");"
                  - Style:
                      Element:
                        attributes:
                          style: Boolean
                        children:
                          - Text: "h1 "
                          - Text: "{"
                          - Text: "color: red; }"
