crates/djls-template-ast/src/snapshots/djls_template_ast__parser__tests__parse_script.snap
---
source: crates/djls-template-ast/src/parser.rs
expression: ast
---
nodes:
  - Script:
      Element:
        attributes:
          script: Boolean
          type:
            Value: text/javascript
        children:
          - Script:
              Comment:
                content: Single line comment
                kind: SingleLine
          - Text: const x = 1;
          - Script:
              Comment:
                content: "Multi-line\n        comment"
                kind: MultiLine
          - Text: console.log(x);
